feat: comments were added and refactoring some methods