@@ -4,8 +4,6 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
 
-import java.util.stream.Collectors;
-
 @Service
 @AllArgsConstructor
 public class OrderFinder {
@@ -13,8 +11,23 @@ public class OrderFinder {
     private OrderRepository repository;
 
     public Mono<OrderResponse> findOrders() {
-        return repository.findAll().collect(Collectors.toList()).map(
-                orders -> new OrderResponse(orders.stream().toList())
-        );
+
+//        return repository.findAll().collect(Collectors.toList()).map(
+//                orders -> new OrderResponse(orders.stream().toList())
+//        );
+
+        // refactor
+//        return repository.findAll() //
+//                .collectList() // this method return a  Mono<List<Order>>
+//                .map(OrderResponse::new);
+
+        // returning response or mono empty when we get an error
+        return repository.findAll() //
+                .collectList() // this method return a  Mono<List<Order>>
+                .map(OrderResponse::new)
+                .doOnError(
+//                        throwable -> Mono.error(throwable)
+                    error -> Mono.empty()
+                );
     }
 }
